--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.I190468"
         tools:targetApi="31">
         <activity
+            android:name=".fifthscreen"
+            android:exported="false" />
+        <activity
+            android:name=".forthscreen"
+            android:exported="false" />
+        <activity
             android:name=".thirdscreen"
             android:exported="false" />
         <activity
