--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
         android:theme="@style/Theme.I190468"
         tools:targetApi="31">
         <activity
+            android:name=".tenthscreen"
+            android:exported="false" />
+        <activity
+            android:name=".eightscreen"
+            android:exported="false" />
+        <activity
+            android:name=".seventhscreen"
+            android:exported="false" />
+        <activity
+            android:name=".sixthscreen"
+            android:exported="false" />
+        <activity
             android:name=".fifthscreen"
             android:exported="false" />
         <activity
