--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.I190468"
         tools:targetApi="31">
         <activity
+            android:name=".seventeenscreen"
+            android:exported="false" />
+        <activity
+            android:name=".sixteenscreen"
+            android:exported="false" />
+        <activity
             android:name=".fifteenscreen"
             android:exported="false" />
         <activity
